--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 </head>
 
 <body>
-    <h1>lev1_7 &</h1>
+    <h1>String Methods lev1_7</h1>
     <h2 id="output"></h2>
 
     <h1>lev1_8</h1>
     <h2 id="output02"></h2>
+
+    <h1>Template Literals Lev1_1</h1>
+    <h2 id="output03"></h2>
+
+    <h1>lev1_2</h1>
+    <h2 id="output04"></h2>
 
 
 
